--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -7,7 +7,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6 order-2 order-md-1">
-        <h2 class="section-title" id="{{ .id }}">{{ .title | markdownify }}</h2>
+        <h2 class="section-title" {{with .id}} id="{{ . }}"{{end}}>{{ .title | markdownify }}</h2>
         <p>{{ .content | markdownify }}</p>
         {{ if .button.enable }}
         {{ with .button }}
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <h2 class="section-title" id="{{ .id }}">{{ .title | markdownify }}</h2>
+        <h2 class="section-title" {{with .id}} id="{{ . }}"{{end}}>{{ .title | markdownify }}</h2>
         <p>{{ .content | markdownify }}</p>
         {{ if .button.enable }}
         {{ with .button }}
