[FIX] updated theme and configuration files to work with current (0.147.5) version of hugo, [FIX] site.DisqusShortname changed to .Site.Config.Services.Disqus.Shortname in template and shortname moved to service:discus:shortname in config [FIX] change of variable names 	site.Title => site.Params.Title 	site.Social => site.Params.Socials 	site.Authors => site.Params.Authors made appropriate changes to head partial containing the entries in themes [FIX] split language config to language and its params moved title and footer entries to params section.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,7 +9,7 @@
         <div class="content">{{.Content}}</div>
 
         <!-- comments -->
-        {{ if site.DisqusShortname }}
+        {{ if  .Site.Config.Services.Disqus.Shortname }}
         <div class="mt-5">
           {{ template "_internal/disqus.html" . }}
         </div>
