--- a/themes/bigspring/layouts/_default/single.html
+++ b/themes/bigspring/layouts/_default/single.html
@@ -10,9 +10,9 @@
         <img src="{{ .Params.image | relURL }}" alt="{{ .Title }}" class="img-fluid w-100 rounded mb-4">
         <h2 class="mb-4">{{ .Title }}</h2>
         <div class="content">{{.Content}}</div>
-        
+
         <!-- comments -->
-        {{ if site.DisqusShortname }}
+        {{ if  .Site.Config.Services.Disqus.Shortname }}
         <div class="mt-5">
           {{ template "_internal/disqus.html" . }}
         </div>
