--- a/themes/bigspring/layouts/partials/head.html
+++ b/themes/bigspring/layouts/partials/head.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
-<title>{{.Title | default site.Title}}</title>
+<title>{{.Title | default site.Params.Title}}</title>
 
 <!-- base url -->
 {{ if or (eq site.BaseURL "/") (eq site.BaseURL "http://localhost:1313/") (eq site.BaseURL "http://examplesite.org/") (eq site.BaseURL "https://examplesite.org/") (eq site.BaseURL "http://examplesite.com/") (eq site.BaseURL "https://examplesite.com/")}}{{else}}
@@ -48,8 +48,8 @@
 {{ end -}}
 <meta name="twitter:title" content="{{ with .Title }}{{ . }}{{ else }}{{ site.Title }}{{ end }}"/>
 <meta name="twitter:description" content="{{ with .Description }}{{ . }}{{ else }}{{ if .IsPage }}{{ .Summary }}{{ else }}{{ with site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}"/>
-{{ with site.Social.twitter -}}<meta name="twitter:site" content="@{{ . }}"/>{{ end -}}
-{{ range site.Authors }}
+{{ with site.Params.Socials.twitter -}}<meta name="twitter:site" content="@{{ . }}"/>{{ end -}}
+{{ range site.Params.Authors }}
   {{ with .twitter -}}<meta name="twitter:creator" content="@{{ . }}"/>{{ end -}}
 {{ end -}}
 
